# spongefish

./: Cargo.toml
.github/workflows/: pr.yml
circuit/: Cargo.toml
circuit/tests/: builder.rs
spongefish/: Cargo.toml
spongefish/examples/: schnorr.rs
spongefish/src/: codecs.rs  lib.rs  narg_prover.rs  narg_verifier.rs
spongefish/src/instantiations/: hash.rs  permutations.rs
