[workspace]
members = ["circuit", "derive", "pow", "spongefish"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.7.1"
repository = "https://github.com/arkworks-rs/spongefish"
homepage = "https://github.com/arkworks-rs/spongefish"

[workspace.lints.clippy]
# all lints that are on by default (correctness, suspicious, style, complexity, perf)
all = { level = "warn", priority = -1 }

# new lints that are still under development
nursery = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
doc_markdown = "allow"

# lints which are rather strict or have occasional false positives
pedantic = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
cast_possible_truncation = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
default_trait_access = "allow"
module_name_repetitions = "allow"
missing_safety_doc = "allow"
many_single_char_names = "allow"
should_panic_without_expect = "allow"
similar_names = "allow"
too_long_first_doc_paragraph = "allow"
doc_lazy_continuation = "allow"
tuple_array_conversions = "allow"
naive_bytecount = "allow"

[workspace.dependencies]
ark-bls12-381 = "^0.6"
ark-bn254 = "^0.6"
ark-curve25519 = "^0.6"
ark-ec = "^0.6"
ark-ff = "^0.6"
ark-pallas = "^0.6"
ark-secp256k1 = "^0.6"
ark-secp256r1 = "^0.6"
ark-serialize = "^0.6"
ark-std = "^0.6"
ark-vesta = "^0.6"
arrayvec = "0.7.6"
blake2 = "0.11.0-rc.5"
blake3 = { version = "^1.8.4", features = ["traits-preview", "zeroize"] }
bls12_381 = "^0.8.0"
bytemuck = "^1.22"
curve25519-dalek = "^4.1"
digest = "0.11.2"
hashbrown = { version = "0.17.0", default-features = false, features = [
    "allocator-api2",
    "default-hasher",
    "inline-more",
] }
hex = "0.4.3"
itertools = { version = "0.14.0", features = ["use_alloc"], default-features = false }
k12 = "0.5.0"
k256 = "^0.13"
keccak = "^0.1.5"
libtest-mimic = "0.8.1"
p256 = "^0.13"
p3-baby-bear = "0.5"
p3-field = "0.5"
p3-koala-bear = "0.5"
p3-mersenne-31 = "0.5"
p3-poseidon2 = "0.5"
p3-symmetric = "0.5"
pallas = "^1.0.0"
rand = "^0.8.5"
rayon = "^1.10.0"
risc0-zkp = "3.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11.0"
sha3 = "=0.11.0"
spin = { version = "0.12", default-features = false, features = ["rwlock"] }
# Intra-workspace dependencies
spongefish = { version = "0.7.1", path = "spongefish" }
spongefish-circuit = { version = "0.7.1", path = "circuit" }
spongefish-derive = { version = "0.7.1", path = "derive" }
zeroize = "^1.8.1"
