[package]
name = "spongefish-circuit"
description = "Circuits for proving relations over spongefish transcripts"
documentation = "https://docs.rs/spongefish-circuit"
edition.workspace = true
readme.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version = "0.7.3"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["p3-baby-bear"]
p3-baby-bear = ["dep:p3-baby-bear", "spongefish/p3-baby-bear"]

[dependencies]

hashbrown = { workspace = true }
itertools = { workspace = true }
# Optional Plonky3/BabyBear support
p3-baby-bear = { workspace = true, optional = true }
p3-field = { workspace = true }
spin = { workspace = true }
spongefish = { workspace = true, features = ["derive"] }

[dev-dependencies]
p3-baby-bear = { workspace = true }
spongefish = { workspace = true, features = ["p3-baby-bear"] }

[lints]
workspace = true
